# MatrixCalc

./: CMakeLists.txt  Doxyfile  Makefile  README.md  a.out  help.txt  list.txt  makuldan  temp.txt  test.txt  todo.txt  workspace.code-workspace  zadani.txt
assets/: formulas.txt  help.txt
doc/: CApplication_8cpp.html  CApplication_8cpp__incl.map  CApplication_8cpp__incl.md5  CApplication_8h.html  CApplication_8h__incl.md5  CApplication_8h_source.html  CDense_8cpp.html  CDense_8cpp__incl.map  CDense_8cpp__incl.md5  CDense_8h__dep__incl.map  CDense_8h__dep__incl.md5  CDense_8h__incl.map  CDense_8h_source.html  CExceptions_8h__dep__incl.md5  CExceptions_8h__incl.map  CExceptions_8h__incl.md5  CExceptions_8h_source.html  CExpr_8cpp.html  CExpr_8cpp__incl.md5  CExpr_8h.html  CExpr_8h__dep__incl.map  CExpr_8h_source.html  CMatrixCommands_8cpp__incl.map  CMatrixCommands_8cpp__incl.md5  CMatrixCommands_8h.html  CMatrixCommands_8h__dep__incl.md5  CMatrixCommands_8h__incl.map  CMatrixCommands_8h_source.html  CMatrix_8cpp.html  CMatrix_8cpp__incl.map  CMatrix_8h.html  CMatrix_8h__dep__incl.map  CMatrix_8h__incl.map  CMatrix_8h__incl.md5  CMatrix_8h_source.html  CSparse_8cpp.html  CSparse_8h.html  CSparse_8h__dep__incl.md5  CSparse_8h__incl.map  CSparse_8h_source.html  (+88 more)
examples/: matrix  matrixDet  matrixGEM  matrixInverse2  matrixOut  poznatky
lib/: CApplicaion.h  CApplication.h  CDense.h  CExceptions.h  CExpr.h  CMatrix.h  CMatrixCommands.h  CSparse.h  CToken.h  MatrixFunctions.h  a.out  define.h  main  main.cpp  temp  temp.cpp
src/: CApplication.cpp  CApplicationNew.cpp  (+15 more)
(+295 files in other folders)
